# ctftime-bot

./: Cargo.toml  Dockerfile  LICENSE
.github/workflows/: ci.yaml  dev.yaml  main.yaml
src/: api.rs  dtos.rs  main.rs  metrics.rs  templates.rs
src/templates/: event.hbs  ongoing.hbs
