[package]
name = "onb-ctftime-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[dependencies]
teloxide = { version = "0.13", features = [
    "macros",
    "rustls",
    "ctrlc_handler",
], default-features = false }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
